ControlBrowser: -MS Windows call changed
ControlPdf:
-cleanUp() removed - we use now temporary files (where no clean up is needed)

-ControllProcess:
-ProcessBuilder replaced by old "Runtime.getRuntime().exec()" command (caused by some boring issues under MS Windows)